United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6938627 Make temporary directory use property java.io.tmpdir when specified
6938627 : Make temporary directory use property java.io.tmpdir when specified

Details
Type:
Bug
Submit Date:
2010-03-26
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-04-21
Component:
hotspot
OS:
solaris_2.5.1,linux,generic
Sub-Component:
runtime
CPU:
x86,sparc,generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs14,hs18,5.0,6,6u24
Fixed Versions:
hs18

Related Reports
Backport:
Backport:
Backport:
Backport:
Duplicate:
Duplicate:
Duplicate:
Relates:
Relates:
Relates:
Relates:
Relates:

Sub Tasks

Description
The directory "/tmp" or %TEMP% on windows is hardcoded in the JVM and should be changed to look at the property java.io.tmpdir first.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/a2ea687fdc7c
                                     
2010-04-01
EVALUATION

Summary: Get java.io.tmpdir property in os::get_temp_directory() and call this instead of harcoding "/tmp".  Don't assume trailing file_separator either.
                                     
2010-04-01



Hardware and Software, Engineered to Work Together